--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body {
     margin: 0;
     padding: 0;
 }
+*{
+    text-decoration: none !important;
+}
 
 .container {
     max-width: 600px;
@@ -24,6 +27,7 @@ body {
 .advert-text {
     font-size: 16px;
     margin-top: 10px;
+    color: rgb(65, 64, 64);
 }
 
 .call-to-action {
