--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
     margin: 0;
     padding: 0;
 }
 *{
     text-decoration: none !important;
+    font-family: 'Advent Pro', sans-serif;
 }
 
 .container {
@@ -14,24 +13,26 @@ body {
     background-color: #ffffff;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
     padding: 0 20px 20px 20px;
+    opacity: .9;
+    backdrop-filter: blur 20px;
 }
 
 
 .advert-heading {
     font-size: 24px;
     font-weight: bold;
-    margin-top: 20px;
+    margin: 5px 0 !important;
     color: #e74c3c; /* Redo Developers' brand color */
 }
 
 .advert-text {
-    font-size: 16px;
-    margin-top: 10px;
+    font-size: 20px;
     color: rgb(65, 64, 64);
+    margin: 10px 0 !important;
 }
 
 .call-to-action {
-    margin-top: 30px;
+    margin-top: 0px;
     text-align: center;
 }
 
